# VRTOUR

./: .gitignore  README.md  index.PHP  site web vrtour.html  style.css
vrtour_app/: CMakeLists.txt  main.cpp  vrt_database.cpp  vrt_database.h  vrt_downloader.cpp  vrt_downloader.h  vrt_place.cpp  vrt_place.h
vrtour_app/vrtour_qml/: Main.qml  VRT_HomePage.qml  VRT_Page.qml  VRT_PlaceCard.qml  VRT_TabBar.qml  ressources.qrc
